--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
-    "node": "^15.8.0",
+    "node-sass": "^4.14.0",
+    "node-sass-middleware": "^0.11.0",
     "nodemailer": "^6.4.17",
     "nodemon": "^2.0.7"
   }
